Add generating random BN instances from BBM models.

--- a/example/workflow/bbm.ipynb
+++ b/example/workflow/bbm.ipynb
@@ -340,6 +340,83 @@
     "bn = model.to_bn_inputs_true()\n",
     "print(bn.to_aeon())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45971039",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[BooleanNetwork([\"v_Aop\", \"v_CNK\", \"v_Drk\", \"v_Dsor1\", \"v_Ksr\", \"v_Pnt\", \"v_Pvf1\", \"v_Pvf2\", \"v_Pvf3\", \"v_Pvr\", \"v_Raf\", \"v_Ras\", \"v_Rl\", \"v_Sos\", \"v_Src42\", \"v_Sty\", \"v_Targets\", \"v_msk\"], [\"v_Rl -| v_Aop\", \"v_Pvr -> v_Drk\", \"v_Raf -> v_Dsor1\", \"v_Rl -> v_Pnt\", \"v_Pvf1 -> v_Pvr\", \"v_Pvf2 -> v_Pvr\", \"v_Pvf3 -> v_Pvr\", \"v_CNK -> v_Raf\", \"v_Ksr -> v_Raf\", \"v_Ras -> v_Raf\", \"v_Src42 -> v_Raf\", \"v_Sos -> v_Ras\", \"v_Sty -| v_Ras\", \"v_Dsor1 -> v_Rl\", \"v_msk -> v_Rl\", \"v_Drk -> v_Sos\", \"v_Aop -| v_Targets\", \"v_Pnt -> v_Targets\"], [], [\"!v_Rl\", \"false\", \"v_Pvr\", \"v_Raf\", \"false\", \"v_Rl\", \"true\", \"false\", \"true\", \"v_Pvf3 | v_Pvf2 | v_Pvf1\", \"v_CNK & v_Ksr & v_Ras & v_Src42\", \"v_Sos & !v_Sty\", \"v_Dsor1 & v_msk\", \"v_Drk\", \"false\", \"false\", \"!v_Aop & v_Pnt\", \"true\"]),\n",
+       " BooleanNetwork([\"v_Aop\", \"v_CNK\", \"v_Drk\", \"v_Dsor1\", \"v_Ksr\", \"v_Pnt\", \"v_Pvf1\", \"v_Pvf2\", \"v_Pvf3\", \"v_Pvr\", \"v_Raf\", \"v_Ras\", \"v_Rl\", \"v_Sos\", \"v_Src42\", \"v_Sty\", \"v_Targets\", \"v_msk\"], [\"v_Rl -| v_Aop\", \"v_Pvr -> v_Drk\", \"v_Raf -> v_Dsor1\", \"v_Rl -> v_Pnt\", \"v_Pvf1 -> v_Pvr\", \"v_Pvf2 -> v_Pvr\", \"v_Pvf3 -> v_Pvr\", \"v_CNK -> v_Raf\", \"v_Ksr -> v_Raf\", \"v_Ras -> v_Raf\", \"v_Src42 -> v_Raf\", \"v_Sos -> v_Ras\", \"v_Sty -| v_Ras\", \"v_Dsor1 -> v_Rl\", \"v_msk -> v_Rl\", \"v_Drk -> v_Sos\", \"v_Aop -| v_Targets\", \"v_Pnt -> v_Targets\"], [], [\"!v_Rl\", \"true\", \"v_Pvr\", \"v_Raf\", \"false\", \"v_Rl\", \"true\", \"true\", \"true\", \"v_Pvf3 | v_Pvf2 | v_Pvf1\", \"v_CNK & v_Ksr & v_Ras & v_Src42\", \"v_Sos & !v_Sty\", \"v_Dsor1 & v_msk\", \"v_Drk\", \"true\", \"false\", \"!v_Aop & v_Pnt\", \"false\"])]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_bn_list = model.to_bn_inputs_random(instance_count=2, random_seed=42)\n",
+    "random_bn_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6bbc6fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v_Rl -| v_Aop\n",
+      "v_Pvr -> v_Drk\n",
+      "v_Raf -> v_Dsor1\n",
+      "v_Rl -> v_Pnt\n",
+      "v_Pvf1 -> v_Pvr\n",
+      "v_Pvf2 -> v_Pvr\n",
+      "v_Pvf3 -> v_Pvr\n",
+      "v_CNK -> v_Raf\n",
+      "v_Ksr -> v_Raf\n",
+      "v_Ras -> v_Raf\n",
+      "v_Src42 -> v_Raf\n",
+      "v_Sos -> v_Ras\n",
+      "v_Sty -| v_Ras\n",
+      "v_Dsor1 -> v_Rl\n",
+      "v_msk -> v_Rl\n",
+      "v_Drk -> v_Sos\n",
+      "v_Aop -| v_Targets\n",
+      "v_Pnt -> v_Targets\n",
+      "$v_Aop: !v_Rl\n",
+      "$v_CNK: false\n",
+      "$v_Drk: v_Pvr\n",
+      "$v_Dsor1: v_Raf\n",
+      "$v_Ksr: false\n",
+      "$v_Pnt: v_Rl\n",
+      "$v_Pvf1: true\n",
+      "$v_Pvf2: false\n",
+      "$v_Pvf3: true\n",
+      "$v_Pvr: v_Pvf3 | v_Pvf2 | v_Pvf1\n",
+      "$v_Raf: v_CNK & v_Ksr & v_Ras & v_Src42\n",
+      "$v_Ras: v_Sos & !v_Sty\n",
+      "$v_Rl: v_Dsor1 & v_msk\n",
+      "$v_Sos: v_Drk\n",
+      "$v_Src42: false\n",
+      "$v_Sty: false\n",
+      "$v_Targets: !v_Aop & v_Pnt\n",
+      "$v_msk: true\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(random_bn_list[0].to_aeon())"
+   ]
   }
  ],
  "metadata": {
