--- a/example/workflow/bbm.ipynb
+++ b/example/workflow/bbm.ipynb
@@ -7,9 +7,7 @@
    "source": [
     "# Working with BBM database\n",
     "\n",
-    "This notebook illustrates the capability of AEON.py to fetch and prepare BN models directly from the Biodivine Boolean Models database.\n",
-    "\n",
-    "*Work in progress...*"
+    "This notebook illustrates the capability of AEON.py to fetch and prepare BN models directly from the Biodivine Boolean Models database."
    ]
   },
   {
@@ -89,15 +87,15 @@
      "output_type": "stream",
      "text": [
       "Empty config:\n",
-      "\tBbmFilterConfig(variables=<None,None>, inputs=<None,None>, regulations=<None,None>, keywords=[])\n",
+      "\t{}\n",
       "Initialized config:\n",
-      "\tBbmFilterConfig(variables=<10,20>, inputs=<None,None>, regulations=<None,None>, keywords=[\"cell-collective\", \"curated\"])\n"
+      "\t{'min_variables': 10, 'max_variables': 20, 'keywords': ['cell-collective', 'curated']}\n"
      ]
     }
    ],
    "source": [
     "# We can configure the filtering using the BbmFilterConfig instance\n",
-    "config = BbmFilterConfig()\n",
+    "config: BbmFilterConfig = {}\n",
     "print(f\"Empty config:\\n\\t{config}\")\n",
     "\n",
     "config[\"min_variables\"] = 10\n",
@@ -343,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "45971039",
    "metadata": {},
    "outputs": [
@@ -354,7 +352,7 @@
        " BooleanNetwork([\"v_Aop\", \"v_CNK\", \"v_Drk\", \"v_Dsor1\", \"v_Ksr\", \"v_Pnt\", \"v_Pvf1\", \"v_Pvf2\", \"v_Pvf3\", \"v_Pvr\", \"v_Raf\", \"v_Ras\", \"v_Rl\", \"v_Sos\", \"v_Src42\", \"v_Sty\", \"v_Targets\", \"v_msk\"], [\"v_Rl -| v_Aop\", \"v_Pvr -> v_Drk\", \"v_Raf -> v_Dsor1\", \"v_Rl -> v_Pnt\", \"v_Pvf1 -> v_Pvr\", \"v_Pvf2 -> v_Pvr\", \"v_Pvf3 -> v_Pvr\", \"v_CNK -> v_Raf\", \"v_Ksr -> v_Raf\", \"v_Ras -> v_Raf\", \"v_Src42 -> v_Raf\", \"v_Sos -> v_Ras\", \"v_Sty -| v_Ras\", \"v_Dsor1 -> v_Rl\", \"v_msk -> v_Rl\", \"v_Drk -> v_Sos\", \"v_Aop -| v_Targets\", \"v_Pnt -> v_Targets\"], [], [\"!v_Rl\", \"true\", \"v_Pvr\", \"v_Raf\", \"false\", \"v_Rl\", \"true\", \"true\", \"true\", \"v_Pvf3 | v_Pvf2 | v_Pvf1\", \"v_CNK & v_Ksr & v_Ras & v_Src42\", \"v_Sos & !v_Sty\", \"v_Dsor1 & v_msk\", \"v_Drk\", \"true\", \"false\", \"!v_Aop & v_Pnt\", \"false\"])]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d6bbc6fe",
    "metadata": {},
    "outputs": [
@@ -417,11 +415,19 @@
    "source": [
     "print(random_bn_list[0].to_aeon())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ee7362a-604b-4901-92a6-735a33afc6e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -435,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
