fix: Update BBM API in notebook.

--- a/example/workflow/bbm.ipynb
+++ b/example/workflow/bbm.ipynb
@@ -52,17 +52,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "230\n"
+      "285\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['202fec2d-a27d-45cd-a1d2-6d619412b1d5',\n",
-       " '15ce1709-b98e-4fcf-9183-9adda842a437',\n",
-       " 'dad447c8-c14d-40d2-8496-d8953690a20a',\n",
-       " '6454b139-57fa-4a7f-8f52-5623db697dc5',\n",
-       " '6bfb7209-57ea-40e1-9d78-cbde5f9d106f']"
+       "['1', '2', '3', '4', '5']"
       ]
      },
      "execution_count": 2,
@@ -120,11 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "['dad447c8-c14d-40d2-8496-d8953690a20a',\n",
-       " '36dca970-8bea-4620-9088-8da2890211a4',\n",
-       " '86248135-ed19-44ea-a13b-daf0ca504986',\n",
-       " '02329d2b-8da8-4c97-86ae-743ad3f654ec',\n",
-       " '20a7ff67-dc62-4240-b2ac-6aa12382d4a0']"
+       "['3', '10', '15', '21', '22']"
       ]
      },
      "execution_count": 4,
@@ -170,7 +162,7 @@
    ],
    "source": [
     "# Fetch a small network (with 18 variables, 8 of which are inputs) by its ID\n",
-    "bn = BiodivineBooleanModels.fetch_network(\"b427a7d3-5158-48ab-991b-1db895dd2b4d\")\n",
+    "bn = BiodivineBooleanModels.fetch_network(\"028\")\n",
     "print(bn)"
    ]
   },
@@ -190,7 +182,7 @@
    ],
    "source": [
     "# Fetch the same network, but with inlined inputs\n",
-    "bn = BiodivineBooleanModels.fetch_network(\"b427a7d3-5158-48ab-991b-1db895dd2b4d\", inline_inputs=True)\n",
+    "bn = BiodivineBooleanModels.fetch_network(\"028\", inline_inputs=True)\n",
     "print(bn)"
    ]
   },
@@ -220,12 +212,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BbmModel(id=b427a7d3-5158-48ab-991b-1db895dd2b4d, name=VEGF-PATHWAY-OF-DROSOPHILA, variables=10, inputs=8, regulations=18)\n"
+      "BbmModel(id=28, name=VEGF-PATHWAY-OF-DROSOPHILA, variables=10, inputs=8, regulations=18)\n"
      ]
     }
    ],
    "source": [
-    "model = BiodivineBooleanModels.fetch_model(\"b427a7d3-5158-48ab-991b-1db895dd2b4d\")\n",
+    "model = BiodivineBooleanModels.fetch_model(\"028\")\n",
     "print(model)"
    ]
   },
